yaml/base/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
  name: mosquitto
spec:
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  - name: websockets
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: mosquitto
status:
  loadBalancer: {}
