yaml/base/mqtt/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mosquitto
  name: mosquitto
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 9001
  to:
    name: mosquitto
    weight: null
status: {}
